add some sectios and footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,13 @@
   margin: 0;
 }
 
+h2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 70px;
+}
+
 a {
   text-decoration: none;
 }
@@ -15,32 +22,30 @@ a {
 header {
   border-bottom: 1px solid #E5E5E5;
   padding: 25px 0;
-}
-header .container {
   display: flex;
   align-items: center;
 }
-header .container .logotype {
+header .logotype {
   vertical-align: bottom;
 }
-header .container .navigation {
+header .navigation {
   margin-left: 244px;
 }
-header .container .navigation ul {
+header .navigation ul {
   display: flex;
   list-style: none;
 }
-header .container .navigation ul .tab {
+header .navigation ul .tab {
   margin-right: 115px;
 }
-header .container .navigation ul .tab a {
+header .navigation ul .tab a {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 15px;
   line-height: 18px;
   color: #030305;
 }
-header .container .navigation ul .tab a:hover {
+header .navigation ul .tab a:hover {
   border-bottom: 2px solid #000;
 }
 
@@ -49,11 +54,12 @@ header .container .navigation ul .tab a:hover {
   background-size: cover;
   background-position: center;
   padding: 104px 0 154px;
+  margin-bottom: 100px;
 }
-.main .container .main-info {
+.main .main-info {
   height: 705px;
 }
-.main .container .main-info h1 {
+.main .main-info h1 {
   max-width: 855px;
   margin-bottom: 40px;
   font-family: "Roboto", sans-serif;
@@ -62,7 +68,7 @@ header .container .navigation ul .tab a:hover {
   line-height: 88px;
   color: #030305;
 }
-.main .container .main-info p {
+.main .main-info p {
   max-width: 502px;
   margin-bottom: 40px;
   font-family: "Roboto", sans-serif;
@@ -71,17 +77,141 @@ header .container .navigation ul .tab a:hover {
   line-height: 21px;
   color: #030305;
 }
-.main .container .main-info a {
+.main .main-info a {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 150%;
-  padding: 20px 53px;
   background-color: #030305;
   color: #fff;
   transition: background-color 0.5s;
+  padding: 20px 53px;
 }
-.main .container .main-info a:hover {
+.main .main-info a:hover {
   cursor: pointer;
   background-color: #575757;
+}
+
+.car {
+  margin-bottom: 100px;
+}
+.car .variants {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.car .variants .auto {
+  max-width: 384px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.car .variants .auto .auto-photo {
+  vertical-align: bottom;
+  margin-bottom: 15px;
+}
+.car .variants .auto .auto-name {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 17px;
+}
+.car .variants .auto .auto-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 13px;
+}
+.car .variants .auto .auto-info .auto-specification {
+  width: 110px;
+  height: 92px;
+}
+.car .variants .auto .auto-info .auto-specification img {
+  margin: 0 7.5px 11px;
+}
+.car .variants .auto .auto-action a {
+  font-size: 16px;
+  line-height: 150%;
+  background-color: #030305;
+  color: #fff;
+  transition: background-color 0.5s;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  padding: 15px 122px;
+}
+.car .variants .auto .auto-action a:hover {
+  cursor: pointer;
+  background-color: #575757;
+}
+
+.booking {
+  position: relative;
+}
+.booking h2 {
+  margin-bottom: 20px;
+}
+.booking p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  margin-bottom: 60px;
+  color: #5D5D5F;
+}
+.booking .form-and-photo {
+  overflow: hidden;
+}
+.booking .form-and-photo .form {
+  display: flex;
+  flex-direction: column;
+  max-width: 326px;
+  margin-bottom: 121px;
+}
+.booking .form-and-photo .form input {
+  margin-bottom: 15px;
+  padding: 22px 0 22px 18px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  border: 1px solid #5D5D5F;
+  box-sizing: border-box;
+  outline: none;
+}
+.booking .form-and-photo .form a {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  background-color: #030305;
+  color: #fff;
+  transition: background-color 0.5s;
+  padding: 20px 116px;
+}
+.booking .form-and-photo .form a:hover {
+  cursor: pointer;
+  background-color: #575757;
+}
+.booking .form-and-photo .photo-for-form {
+  position: absolute;
+  bottom: 0;
+  left: 481px;
+}
+
+footer {
+  border-top: 1px solid #E5E5E5;
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 0;
+  align-items: center;
+}
+footer .logotype {
+  vertical-align: bottom;
+}
+footer .rights {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
 }/*# sourceMappingURL=style.css.map */
